[gh-440] Fix "Warnings" header in dark mode

--- a/source/WebApp/less/imports/dark.less
+++ b/source/WebApp/less/imports/dark.less
@@ -19,6 +19,7 @@
 
     --header-color: @dark-header-color;
     --error-header-color: @dark-header-color;
+    --warning-header-color: @dark-header-color;
     --offline-header-color: @dark-header-color;
     --muted-header-color: @dark-header-color;
 
